<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/participants"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/sep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:spanCount="2"
        tools:listitem="@layout/item_participant" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_audio_qos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/txt_audio"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_audio_qos_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toEndOf="@+id/txt_audio_qos"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_video_qos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/txt_video"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_audio_qos" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_video_qos_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toEndOf="@+id/txt_video_qos"
        app:layout_constraintTop_toBottomOf="@+id/txt_audio_qos" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/adjust_media_quality_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/sep">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_width"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_width_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toEndOf="@+id/txt_width"
            app:layout_constraintTop_toTopOf="@+id/txt_width" />

        <SeekBar
            android:id="@+id/seek_width"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:max="1280"
            android:progress="480"
            app:layout_constraintBottom_toBottomOf="@+id/txt_width_value"
            app:layout_constraintEnd_toStartOf="@+id/btn_adjust_frame_rate"
            app:layout_constraintStart_toEndOf="@+id/txt_width_value"
            app:layout_constraintTop_toTopOf="@+id/txt_width_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_height"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_width" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_height_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toEndOf="@+id/txt_height"
            app:layout_constraintTop_toTopOf="@+id/txt_height" />

        <SeekBar
            android:id="@+id/seek_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:max="1280"
            android:progress="640"
            app:layout_constraintBottom_toBottomOf="@+id/txt_height_value"
            app:layout_constraintEnd_toStartOf="@+id/btn_adjust_frame_rate"
            app:layout_constraintStart_toEndOf="@+id/txt_height_value"
            app:layout_constraintTop_toTopOf="@+id/txt_height_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_frame_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_frame_rate"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_height" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_frame_rate_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toEndOf="@+id/txt_frame_rate"
            app:layout_constraintTop_toTopOf="@+id/txt_frame_rate" />

        <SeekBar
            android:id="@+id/seek_frame_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:max="60"
            android:progress="30"
            app:layout_constraintEnd_toStartOf="@+id/btn_adjust_frame_rate"
            app:layout_constraintStart_toEndOf="@+id/txt_frame_rate_value"
            app:layout_constraintTop_toTopOf="@+id/txt_frame_rate_value" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_adjust_frame_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_publishers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/txt_publishers"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@+id/adjust_media_quality_container" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/publishers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/controls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_publishers"
        tools:listitem="@layout/item_publisher" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/controls"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/publishers">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cam_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/txt_cam_preview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_connect_session_video"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_connect_session_video"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/txt_connect_session_video"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_connect_session_audio"
            app:layout_constraintStart_toEndOf="@+id/btn_cam_preview"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_connect_session_audio"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/txt_connect_session_audio"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_connect_viewer"
            app:layout_constraintStart_toEndOf="@+id/btn_connect_session_video"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_connect_viewer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/txt_connect_watching"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_connect_session_audio"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
